[tool.pdm]

[tool.pdm.scripts]
start = "uvicorn main:app --reload"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
]
[project]
authors = [
  {name = "SGE", email = "dev@sgeltd.com"},
]
dependencies = [
    "fastapi>=0.88.0",
    "uvicorn[standard]>=0.20.0",
    "aiohttp>=3.8.3",
]
description = ""
license = {text = "MIT"}
name = ""
requires-python = ">=3.9"
version = ""
